# NLP-classification-livedoor-news

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_Dockerfile
notebook/: 1_preprocessing.ipynb  2_basic_agg.ipynb
notebook/.ipynb_checkpoints/: 1_preprocessing-checkpoint.ipynb  2_basic_agg-checkpoint.ipynb
